--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   </head>
   <body>
     <header>
-      <img class="header-logo" src="img/logo.png" alt="logo header">
+      <div class="principal-logo">
+        <img class="header-logo" src="img/logo.png" alt="logo header">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">features</a></li>
+          <li><a href="#">editorials</a></li>
+          <li><a href="#">environment</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">shop</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div class="first-contain"></div>
