add first container with trasparency and text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
       </nav>
     </header>
     <main>
-      <div class="first-contain"></div>
+      <div class="first-contain">
+        <div class="transparency">
+          <div class="first-title">
+            <h2>pretium ac placerat dui interdum nunc in eros urna morbi</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae necessitatibus quia natus porro perferendis debitis vero ducimus </span>
+          </div>
+        </div>
+      </div>
       <div class="structure-contain clearfix">
         <div class="header float-l "></div>
         <div class="left-main float-l dimension-l-r"></div>
