add  main and footer . completed the exercise

--- a/index.html
+++ b/index.html
@@ -27,18 +27,51 @@
       <div class="first-contain">
         <div class="transparency">
           <div class="first-title">
-            <h2>pretium ac placerat dui interdum nunc in eros urna morbi</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae necessitatibus quia natus porro perferendis debitis vero ducimus </span>
+            <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
+            <span class="text-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae necessitatibus quia natus porro perferendis debitis vero ducimus </span>
           </div>
         </div>
       </div>
       <div class="structure-contain clearfix">
-        <div class="header float-l "></div>
-        <div class="left-main float-l dimension-l-r"></div>
-        <div class="central-main float-l"></div>
-        <div class="rigth-main float-l dimension-l-r"></div>
+        <div class="header float-l ">
+          <h1>Leadership</h1>
+          <span class="text-content">Fertenum urna a libero tempus</span>
+        </div>
+        <div class="left-main float-l dimension-l-r">
+          <div id="img-1" >
+            <div class="transparency dimension-transp"></div>
+          </div>
+            <h5>Lorem</h5>
+            <span class="text-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore temporibus pariatur dolor earum dolorem in culpa aut aspernatur facilis qui molestias cum, assumenda accusantium nulla illum officia reiciendis dolorum?
+            </span>
+        </div>
+        <div class="central-main float-l">
+          <div class="dim-background-img" id="img-2" >
+            <div class="transparency dimension-transp"></div>
+          </div>
+            <h5>Ipsum</h5>
+            <span class="text-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur corporis velit ipsa dolor sed a rem sunt ipsum. Eum, odio doloribus! Consequuntur asperiores eos ea? Explicabo, quia. Culpa, deleniti a.
+              Aut natus qui pariatur obcaecati corrupti dolorum assumenda et eius ea quidem ipsa, tenetur perferendis saepe cumque delectus exercitationem distinctio a quas quis culpa provident tempore ad, modi molestias? Porro.
+              Illo explicabo repudiandae sequi modi tempore numquam eum illum, neque natus iure quaerat fugit suscipit sint error facere ut maiores, quod ex corporis ratione quos! Expedita adipisci architecto dolorum fugit?
+              Dolore quaerat repudiandae rerum expedita laboriosam, illum mollitia vitae adipisci nemo voluptatem aliquid laudantium aperiam quae sunt voluptas accusamus minima voluptatum odit, molestias totam architecto illo suscipit dolor itaque? Et?
+              Rerum sapiente aliquam nisi. Aut optio sed fugiat ipsam veritatis! Corporis quaerat commodi sint, iusto in repudiandae aliquam fugit aperiam consequuntur asperiores est nisi cupiditate totam, quisquam, animi quis velit!
+            </span>
+        </div>
+        <div class="rigth-main float-l dimension-l-r">
+          <div class="dim-background-img" id="img-3">
+            <div class="transparency dimension-transp"></div>
+          </div>
+            <h5>Lorem</h5>
+            <span class="text-content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore temporibus pariatur dolor earum dolorem in culpa aut aspernatur facilis qui molestias cum, assumenda accusantium nulla illum officia reiciendis dolorum?
+            </span>
+        </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      Designed with <span class="heart">&hearts;</span> 
+    </footer>
   </body>
 </html>
