--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura WP</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bonus/bonus.css">
   </head>
   <body>
     <header>
@@ -59,7 +60,7 @@
               Rerum sapiente aliquam nisi. Aut optio sed fugiat ipsam veritatis! Corporis quaerat commodi sint, iusto in repudiandae aliquam fugit aperiam consequuntur asperiores est nisi cupiditate totam, quisquam, animi quis velit!
             </span>
         </div>
-        <div class="rigth-main float-l dimension-l-r">
+        <div class="right-main float-l dimension-l-r">
           <div class="dim-background-img" id="img-3">
             <div class="transparency dimension-transp"></div>
           </div>
